UV animation stops working forever if Edit mode entered #29629

Closed
opened 2011-12-15 17:16:02 +01:00 by Micael Dias · 5 comments

%%%Hello

Attached file shows the problem.

If you open the file and move through the timeline, UV animation is OK, but if you enter edit mode just once, the animation will never work again. Saving the file after entering edit mode and then reloading the file will render the animation lost forever.

Important Note: if you close the graph editor before entering edit mode, the animation is NOT lost.

Note 2: UVs were animated using the AnimAll addon.%%%

%%%Hello Attached file shows the problem. If you open the file and move through the timeline, UV animation is OK, but if you enter edit mode just once, the animation will never work again. Saving the file after entering edit mode and then reloading the file will render the animation lost forever. Important Note: if you close the graph editor before entering edit mode, the animation is NOT lost. Note 2: UVs were animated using the AnimAll addon.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Micael, I'm not a prophet but I guess you'll be asked to talk with AnimAll addon's developer. I think there must be some thread on blenderartists.org forum.%%%

%%%Micael, I'm not a prophet but I guess you'll be asked to talk with AnimAll addon's developer. I think there must be some thread on blenderartists.org forum.%%%

%%%Looks like problem is caused by setting fcurves as disabled if RNA path for them isn't valid and resetting this "disabled" flag happens only on manual editing of path. Here's patch which clears this flag if path validation succeeded (it's in attachments).
Assigning to Joshua to validate it's correct change.%%%

%%%Looks like problem is caused by setting fcurves as disabled if RNA path for them isn't valid and resetting this "disabled" flag happens only on manual editing of path. Here's patch which clears this flag if path validation succeeded (it's in attachments). Assigning to Joshua to validate it's correct change.%%%

%%%Patch was committed but the bug wasn't closed yet.%%%

%%%Patch was committed but the bug wasn't closed yet.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29629
No description provided.