source/blender/editors/animation/anim_ipo_utils.c
@@ -161,6 +161,11 @@ int getname_anim_fcurve(char *name, ID *id, FCurve *fcu)
 			 *	use the struct's icon if it is set
 			 */
 			icon= RNA_struct_ui_icon(ptr.type);
+			
+			/* valid path - remove the invalid tag since we now know how to use it saving
+			 * users manual effort to reenable using "Revive Disabled FCurves" [#29629]
+			 */
+			fcu->flag &= ~FCURVE_DISABLED;
 		}
 		else {
 			/* invalid path */
